--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
     <img [src]="release.images[0].url" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">{{ release.name }}</h5>
-      <p class="card-text"><span *ngFor="let artist of release.artists" class="badge badge-pill badge-primary">{{ artist.name }}</span></p>
+      <p class="card-text"><span *ngFor="let artist of release.artists" class="badge badge-pill badge-primary">{{ artist.name }}</span><span class="badge badge-pill badge-success">{{ release.release_date }}</span></p>
     </div>
   </div>
 </div>
