--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,15 @@
-<p>search works!</p>
+<div class="row">
+    <div class="col">
+        <input #term  type="text" (keyup)='search(term.value)' class="form-control" placeholder="search artist...">
+    </div>
+</div>
+
+<div class="card-columns mt-5">
+  <div *ngFor="let artist of artists" class="card">
+    <img [src]="artist.images[0].url" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">{{ artist.name }}</h5>
+      <p class="card-text"><span *ngFor="let artist of artist.artists" class="badge badge-pill badge-primary">{{ artist.name }}</span><span class="badge badge-pill badge-success">{{ artist.release_date }}</span></p>
+    </div>
+  </div>
+</div>
