--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,8 +4,8 @@
   </div>
 </div>
 
-
-<app-cards [items]=" artists "></app-cards>
+<app-loading *ngIf="loading"></app-loading>
+<app-cards *ngIf="!loading" [items]=" artists "></app-cards>
 
     
   
