receiving info from artist component

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-5">
   <div class="col">
-    <input #term type="text" (keyup)='search(term.value)' class="form-control" placeholder="search artist...">
+    <input #term type="text" (keyup)='search(term.value)' class="form-control animated fadeIn" placeholder="search artist...">
   </div>
 </div>
 
