--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,1 +1,15 @@
-
+<app-loading *ngIf="loading"></app-loading>
+<div *ngIf="!loading" class="row animated fadeIn mt-5">
+    <div class="col-3">
+        <img [src]="artist.images | noimage " class="img-circle">
+    </div>
+    <div class="col">
+        <h3>{{artist.name}}</h3>
+        <p><i>{{ artist.genres[0] | titlecase }}, {{ artist.genres[1] | titlecase }}</i></p>
+        <a class="btn btn-dark btn-sm" role="button" [href]="artist.external_urls.spotify" target="_blank">
+            Go to artist ...</a>
+    </div>
+    <div class="col-3 ">
+        <button routerLink="/search" type="button" class="btn btn-success btn-center">Back</button>
+    </div>
+</div>
