--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -13,3 +13,26 @@
         <button routerLink="/search" type="button" class="btn btn-success btn-center">Back</button>
     </div>
 </div>
+
+<div class="row mt-5">
+    <div class="col">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Photo</th>
+                    <th>Album</th>
+                    <th>Song</th>
+                    <th>Preview</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let topTrack of topTracks">
+                    <td class="text-center"><img  [src]="topTrack.album.images | noimage " class="img-thumb"></td>
+                    <td>{{ topTrack.album.name }}</td>
+                    <td>{{ topTrack.name}}</td>
+                    <td><audio [src]="topTrack.preview_url" controls></audio></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
