--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,19 @@ hr {
     height: auto;
 }
 
+
+.table {
+    color: white !important;
+}
+
+.table td{
+    vertical-align: middle !important;
+}
+
+th{
+    text-align: center !important;
+}
+
 .card-title,
 .card-text {
     color: black;
@@ -33,8 +46,8 @@ hr {
 }
 
 .img-thumb {
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
 }
 
 
