--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<div class="row mt-5">
+<div class="row mt-5 animated fadeIn fast">
     <div class="col">
         <table class="table">
             <thead>
@@ -27,10 +27,12 @@
             </thead>
             <tbody>
                 <tr *ngFor="let topTrack of topTracks">
-                    <td class="text-center"><img  [src]="topTrack.album.images | noimage " class="img-thumb"></td>
+                    <td><img  [src]="topTrack.album.images | noimage " class="img-thumb"></td>
                     <td>{{ topTrack.album.name }}</td>
                     <td>{{ topTrack.name}}</td>
-                    <td><audio [src]="topTrack.preview_url" controls></audio></td>
+                    <td><!--<audio [src]="topTrack.preview_url" controls></audio>-->
+                        <iframe [src]=" topTrack.uri | domSafe " frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </td>
                 </tr>
             </tbody>
         </table>
