--- a/src/styles.css
+++ b/src/styles.css
@@ -48,17 +48,38 @@ hr {
     height: 50px;
 }
 
+.follow{
+    width: 180px;
+    height: 56px;
+}
+/*Responsive */
+
+@media only screen and (max-width: 424px) {
+    .follow{
+width: 130px;
+    height: 56px;
+}
+ .no-photo{
+    display: none;
+}
+.iframe {
+      width: 50px;
+      height: 50px;
+  }
+}
+
+
 /*Responsive iframe*/
 
 @media only screen and (max-width: 768px) {
-  iframe {
+  .iframe {
       width: 80px;
       height: 80px;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  iframe {
+  .iframe {
       width: 300px;
       height: 80px;
   }
