--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,6 @@
 <app-loading *ngIf="loading"></app-loading>
+<div *ngIf=" error " class="alert alert-danger animated fadeIn mt-5" role="alert">
+    <p>Error <strong>{{ errorStatus }}</strong> : </p>
+    <p>{{ errorMessage }}.</p>
+</div>
 <app-cards [items]=" newReleases "></app-cards>
