adding song's section

--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -5,10 +5,15 @@
     </div>
     <div class="col">
         <h3>{{artist.name}}</h3>
-        <iframe class="follow" [src]=" artist.uri | domSafe: true " scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+        <iframe class="follow" [src]=" artist.uri | domSafe: true " scrolling="no" frameborder="0"
+            style="border:none; overflow:hidden;" allowtransparency="true">
+        </iframe>
         <p><i>{{ artist.genres[0] | titlecase }}, {{ artist.genres[1] | titlecase }}</i></p>
-        <a class="btn btn-dark btn-sm" role="button" [href]="artist.external_urls.spotify" target="_blank">
-            Go to artist ...</a>
+        <a class="btn btn-success btn-sm  " role="button" [href]="artist.external_urls.spotify" target="_blank">
+            <span btn-ico>
+                <i class="fab fa-spotify fa-1x "></i><span class="btn-text">artist profile</span>
+            </span>
+        </a>
     </div>
     <div class="col-3 ">
         <button routerLink="/search" type="button" class="btn btn-success btn-center">Back</button>
@@ -28,11 +33,13 @@
             </thead>
             <tbody>
                 <tr *ngFor="let topTrack of topTracks">
-                    <td class="no-photo"><img  [src]="topTrack.album.images | noimage " class="img-thumb "></td>
+                    <td class="no-photo"><img [src]="topTrack.album.images | noimage " class="img-thumb "></td>
                     <td>{{ topTrack.album.name }}</td>
                     <td>{{ topTrack.name}}</td>
-                    <td><!--<audio [src]="topTrack.preview_url" controls></audio>-->
-                        <iframe class="iframe" [src]=" topTrack.uri | domSafe: false " frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    <td>
+                        <!--<audio [src]="topTrack.preview_url" controls></audio>-->
+                        <iframe class="iframe" [src]=" topTrack.uri | domSafe: false " frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
                     </td>
                 </tr>
             </tbody>
