--- a/src/app/components/song/song.component.html
+++ b/src/app/components/song/song.component.html
@@ -1,1 +1,43 @@
-<p>Works</p>
+<div class="row animated fadeIn mt-5">
+    
+    <div class="col">
+        <iframe [src]=" song.artists[0].uri | domSafe2:true " width="300" height="56" scrolling="no" frameborder="0" 
+            style="border:none; overflow:hidden;" allowtransparency="true">
+        </iframe>
+    </div>
+    <div class="col ">
+         <h3>{{song.name}}</h3>
+        <h4><i *ngFor="let item of song.artists">{{item.name}},  </i></h4>
+        
+
+        <!--<p><i>{{ song.genres[0] | titlecase }}, {{ song.genres[1] | titlecase }}</i></p>-->
+        
+        <button routerLink="/songs" type="button" class="btn btn-success btn-center">Back</button>
+    </div>
+</div>
+<div class="row mt-5 animated fadeIn fast">
+    <div class="col">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th class="no-photo">Photo</th>
+                    <th>Album</th>
+                    <th>Song</th>
+                    <th>Preview</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr >
+                    <td class="no-photo"><img [src]="song.album.images | noimage " class="img-thumb "></td>
+                    <td>{{ song.album.name }}</td>
+                    <td>{{ song.name}}</td>
+                    <td>
+                        <!--<audio [src]="topTrack.preview_url" controls></audio>-->
+                        <iframe class="iframe" [src]=" song.uri | domSafe: false " frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
