--- a/src/app/components/songs/songs.component.html
+++ b/src/app/components/songs/songs.component.html
@@ -12,9 +12,10 @@
             <p class="card-text">
                 <span  class="badge badge-pill badge-primary">{{ song.artists[0].name }}
                 </span>
-                <!--<span class="badge badge-pill badge-success">{{ item.genres[0] }}</span>
-                <span class="badge badge-pill badge-primary">{{ item.genres[1] }}</span>
-                <span class="badge badge-pill badge-info">{{ item.genres[2] }}</span>-->
+
+                <span class="badge badge-pill badge-success">{{ song.artists[1].name }}</span>
+            
+                <span class="badge badge-pill badge-info">{{ song.artists[2].name }}</span>
             </p>
         </div>
     </div>
