--- a/src/styles.css
+++ b/src/styles.css
@@ -38,18 +38,27 @@ hr {
 .badge {
     margin-left: 5px;
 }
+.w100{
+    width: 100%;
+    text-align: center;
+}
+
+.center{
+    margin: 0 auto;
+    width: 90%;
+}
 
 .btn-successfull{
     background: #2ebd59 !important;
     border-radius: 500px;
     color: #fff;    
-    min-width: 92px;
     position: relative !important;
     text-align: center;
     white-space: nowrap;
-    margin: 0 10px 0 0;
     float: left;
     text-decoration: none !important;
+    border: none;
+    padding-top: 0px;
 }
 .btn-successfull:hover{
     background: #1ed760 !important;
@@ -63,7 +72,7 @@ hr {
     letter-spacing: 1px;
     margin-left: 3px;
     font-size: 11px;
-    padding: 4px 4px 3px 8px !important;
+    margin: auto 12px auto 12px;
 }
 
 .img-thumb {
