--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,24 +1,38 @@
 <app-loading *ngIf="loading"></app-loading>
 <div *ngIf="!loading" class="row animated fadeIn mt-5">
-    <div class="col-3">
+    <h3 class="inline-block w100 mb-3">{{artist.name}}</h3>
+
+    <div class="col-4">
         <img [src]="artist.images | noimage " class="img-circle">
     </div>
-    <div class="col">
-        <h3>{{artist.name}}</h3>
-        <iframe class="follow" [src]=" artist.uri | domSafe: true " scrolling="no" frameborder="0"
-            style="border:none; overflow:hidden;" allowtransparency="true">
+    <div class="col-8">
+        
+        <iframe class=" d-block follow " [src]=" artist.uri | domSafe: true " scrolling="no" frameborder="0"
+            style="border:none; overflow:hidden;width: 14rem;" allowtransparency="true">
         </iframe>
+
         <p><i>{{ artist.genres[0] | titlecase }}, {{ artist.genres[1] | titlecase }}</i></p>
-        <a class="btn-successfull " title="Profile on Spotify" role="button" [href]="artist.external_urls.spotify" target="_blank">
-            
-                <i class="fab fa-spotify fa-1x "></i><span class="btn-text">profile</span>
-            
+
+     <a [href]="artist.external_urls.spotify" target="_blank" type="button">            
+                <button  title="Profile on Spotify"  class="btn-successfull">
+                <i class="fab fa-spotify fa-1x "></i>
+                <span class="btn-text">profile</span>
+            </button>
         </a>
+        
     </div>
-    <div class="col-3 ">
+   
+</div>
+
+<div class="row">
+
+ <div class="col ">
+
         <button routerLink="/search" type="button" class="btn-successfull">
-            <i class="fab fa-spotify fa-1x "></i><span class="btn-text">Back</span></button>
+            <i class="fab fa-spotify fa-1x "></i><span class="btn-text">Back</span>
+        </button>
     </div>
+
 </div>
 
 <div class="row mt-5 animated fadeIn fast">
