--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <app-loading *ngIf="loading"></app-loading>
+<h3 class="inline-block w100 my-3">Top Releases</h3>
 <div *ngIf=" error " class="alert alert-danger animated fadeIn mt-5" role="alert">
     <p>Error <strong>{{ errorStatus }}</strong> : </p>
     <p>{{ errorMessage }}.</p>
