icon loading changed

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -3,9 +3,9 @@
 <footer class=" sticky-bottom bg-dark white">
 
     <!-- Copyright -->
-    <div class=" text-center white py-3">Designed & Built © 2020
-        <a target="_blank" href="https://github.com/jcarlos0511/musicfy">by Chara- </a>
-        
+    <div class=" text-center white py-3">By
+        <a target="_blank" href="https://github.com/jcarlos0511/musicfy"> Chara- </a>
+        2020
     </div>
     <!-- Copyright -->
 
