search component changed for artists.components

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" [routerLink]="['/home']">Releases</a>
       </li>
       <li class="nav-item" routerLinkActive="active" >
-        <a class="nav-link" [routerLink]="['/search']" >Artists</a>
+        <a class="nav-link" [routerLink]="['/artists']" >Artists</a>
       </li>
       <li class="nav-item" routerLinkActive="active" >
         <a class="nav-link" [routerLink]="['/songs']">Songs</a>
