localStorage in artists & songs components

--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -32,7 +32,7 @@
 
     <div class="col ">
 
-        <button routerLink="/search" type="button" class="btn-successfull">
+        <button routerLink="/artists" type="button" class="btn-successfull">
             <i class="fab fa-spotify fa-1x "></i><span class="btn-text">Back</span>
         </button>
     </div>
