--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -3,7 +3,7 @@
     <div (click)='seeArtist( item )' *ngFor="let item of items" class="card pointer">
         <img [src]="item.images | noimage " class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">{{ item.name }}</h5>
+            <h5 class="card-title">{{ item.name | truncate : "30" }}</h5>
             <p class="card-text">
                 <span *ngFor="let artist of item.artists" class="badge badge-pill badge-primary">{{ artist.name }}
                 </span>
